--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -6,12 +6,17 @@
   position: relative;
   cursor: pointer;
   text-transform: uppercase;
+  outline: none;
 }
 
+.ColorBox:active {
+  outline: none;
+}
 .copy-container {
   display: flex;
   flex-direction: column;
   height: 100%;
+  z-index: 5;
 }
 
 .copy-button {
@@ -53,4 +58,96 @@
   width: 60px;
   text-align: center;
   line-height: 30px;
+}
+
+/* overlay */
+
+.copy-overlay {
+  opacity: 0;
+  z-index: 0;
+  height: 100%;
+  width: 100%;
+  transition: transform 1.6s ease-in-out;
+  transform: scale(0.1);
+  position: absolute;
+}
+
+.copy-overlay.show {
+  opacity: 1;
+  transform: scale(50);
+  z-index: 10;
+}
+
+.copy-msg {
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 4rem;
+  transform: scale(0.1);
+  opacity: 0;
+  color: #fff;
+  z-index: -1;
+}
+
+.copy-msg.show {
+  text-align: center;
+  opacity: 1;
+  z-index: 25;
+  transform: scale(1);
+  transition: all 0.4s ease-in-out;
+  transition-delay: 0.3s;
+}
+
+.copy-msg h1 {
+  font-weight: 400;
+  text-shadow: 1px 2px #000;
+  background: rgba(255, 255, 255, 0.2);
+  width: 100%;
+  margin-bottom: 0;
+  padding: 1rem;
+}
+
+.copy-msg p {
+  margin-top: 5px;
+  font-size: 2rem;
+  font-weight: 100;
+}
+
+@media screen and (max-width: 520px) {
+  .ColorBox {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 10%;
+    justify-content: space-between;
+  }
+  .copy-container {
+    width: 100%;
+  }
+
+  .copy-overlay {
+    width: 0;
+  }
+
+  .copy-overlay.show {
+    width: 100%;
+  }
+
+  .ColorBox:hover .copy-button {
+    opacity: 0;
+  }
+
+  .copy-msg h1 {
+    font-size: 3rem;
+  }
+  .copy-msg p {
+    margin: 5px;
+  }
 }
