--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -52,3 +52,11 @@
   margin-left: auto;
   margin-right: 1rem;
 }
+
+@media screen and (max-width: 640px) {
+  .Navbar {
+    flex-direction: column;
+    padding: 1rem;
+    height: unset;
+  }
+}
